# frankenz

./: .gitignore  CLAUDE.md  pyproject.toml
demos/: 1 - Mock Data.ipynb  2 - Photometric Inference.ipynb  3 - Photometric PDFs.ipynb  5 - Population Inference with Redshifts.ipynb  6 - Hierarchical Inference with Redshifts.ipynb
docs/: LESSONS.md  TODO.md  frankenz_manual.md  frankenz_review.md  frankenz_usage.md
docs/journal/: 2026-02-28_handover.md  2026-02-28_handover_2.md  2026-02-28_handover_3.md  2026-02-28_handover_4.md  2026-02-28_handover_5.md  2026-03-02_handover.md  2026-03-02_handover_2.md  2026-03-02_handover_3.md  2026-03-03_handover.md  2026-03-04_handover.md  2026-03-05_handover.md  2026-03-05_handover_2.md  2026-03-05_handover_3.md  2026-03-06_handover.md  2026-03-06_handover_sweep.md
docs/plan/: phase_01.md  phase_02.md
example/: example.yaml  frankenz_config.yaml  run_photoz.py
frankenz/: __init__.py  batch.py  bruteforce.py  config.py  fitting.py  io.py  knn.py  networks.py  pdf.py  plotting.py  priors.py  reddening.py  samplers.py  simulate.py  transforms.py
s23b/: frankenz_s23b_config.yaml  qa_training_sample.ipynb  run_photoz_s23b.py  run_sweep.py  s23b_plot.py
s23b/docs/: catalog_schema.md  qa_notebook_plan.md
tests/: conftest.py  test_batch.py  test_bruteforce.py  test_config.py  test_factories.py  test_integration.py  test_io.py  test_knn.py  test_pdf_math.py  test_pdf_mutation.py  test_pdf_utilities.py  test_pipeline.py  test_priors.py  test_reddening.py  test_samplers.py  test_simulate.py  test_transforms.py
